src/test/ui/resolve/issue-16058.stderr
error[E0574]: expected struct, variant or union type, found enum `Result`
  --> $DIR/issue-16058.rs:8:9
   |
LL |         Result {
   |         ^^^^^^ not a struct, variant or union type
help: possible better candidates are found in other modules, you can import them into scope
   |
LL | use std::fmt::Result;
   |
LL | use std::io::Result;
   |
LL | use std::thread::Result;
   |

error: aborting due to previous error

